Mark boost as system library to avoid warning failures on compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ endif()
 # configuring boost
 set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost 1.72.0 REQUIRED COMPONENTS container program_options thread)
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 message(${Boost_INCLUDE_DIRS})
 
 # providing subdirectories for header inclusion
