Implement Graph FD validation
Usage example:
```
./Desbordante_run --primitive=gfdvalid --data=graph_data/quadrangle.txt
 --gfd=graph_data/quadrangle_gfd.txt
```

History:
Change release mode for eigen
Inherit from Primitive
Added possibility to run gfd validation from the console.
Move txt-files to input_data
Fixed parser work.
Add parser and optimize literals
Implemented more convenient access to literals.
Added a parser for reading graphs and graph dependencies from a file
(txt-files for now, dot-files will be implemented in the future).
The function GFDValidation::balanced() has also been fixed,
which used to give an error on small data.
Reformat the files
Refresh eigen link
There was an outdated link.
Update cmake.yml and check-codestyle.yml
Added cloning eigen.
Add initial version of gfd validation
Algorithm for checking if a graph functional dependency
satisfies a given graph.
The primitive interface has not yet been implemented, there is
no reading data from a file, graphs are not from the boost lib.

--- a/.github/workflows/check-codestyle.yml
+++ b/.github/workflows/check-codestyle.yml
@@ -66,6 +66,12 @@ jobs:
       with:
         path: ${{github.workspace}}/lib/pybind11
         key: ${{ runner.os }}-pybind11
+    - name: Cache eigen
+      uses: actions/cache@v3
+      id: cache-eigen
+      with:
+        path: ${{github.workspace}}/lib/eigen
+        key: ${{ runner.os }}eigen
 
     - name: Install Boost
       run: |
@@ -104,6 +110,13 @@ jobs:
         cd lib
         git clone https://github.com/pybind/pybind11.git --branch v2.10
       if: steps.cache-pybind11.outputs.cache-hit != 'true'
+    - name: Download eigen
+      run: |
+        mkdir -p lib
+        sudo chown -R $USER lib
+        cd lib
+        git clone https://gitlab.com/libeigen/eigen.git
+      if: steps.cache-eigen.outputs.cache-hit != 'true'
       
     - name: Generate compile_commands.json
       run: |
